[package]
name = "ochat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
# TODO upgrade to stable when they cut a release
# maud = { version = "0.26.0", features = ["axum"] }
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
codegen-units = 1
lto = true
